# CharSolver

./: CMakeLists.txt  README  release
data/: charsolver.conf  solver-05.net
data/false/: b01.img  b03.img  b05.img
data/true/: a02.img  a03.img  a05.img
img-data/: a01.img  a012.img  a015.img  a016.img  a04.img  a06.img  a07.img  a08.img  a09.img  a10.img  a11.img  a13.img  b02.img  b04.img  c01.img  c02.img  c03.img  c04.img  c05.img  convert  d01.img  d02.img  d03.img  d04.img  d05.img  e01.img  e02.img  e03.img  e04.img  e05.img  out.img
img-data/src/: ai-convert
img-data/testing/: a01.img
src/: CMakeLists.txt  charsolver.cpp  img-convert.cpp
